[workspace]
members = ["xtask"]

[package]
name = "hardwave-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Hardwave Studios"]
license = "MIT"
description = "VST3/CLAP plugin that streams audio to Hardwave Suite for real-time analysis"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }

# WebSocket client
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }

# Serialization
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"

# FFT
rustfft = "6.2"

# Thread-safe communication
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Atomic float operations
atomic_float = "1"

[features]
default = []
gui = ["nih_plug_vizia"]

[profile.release]
lto = "thin"
strip = true
