[workspace]
members = ["xtask"]

[package]
name = "hardwave-analyser"
version = "0.5.0"
edition = "2021"
authors = ["Hardwave Studios"]
license = "MIT"
description = "VST3/CLAP plugin that streams audio to Hardwave Suite for real-time analysis"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# Webview editor (replaces vizia)
wry = { version = "0.46", optional = true }

# WebSocket client
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }

# Serialization
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Token persistence (home dir detection)
dirs = "5"

# FFT
rustfft = "6.2"

# Thread-safe communication
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Atomic float operations
atomic_float = "1"

# GTK for Linux webview event loop
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }

[features]
default = ["gui", "gtk"]
gui = ["wry"]

[profile.release]
lto = "thin"
strip = true
